--- a/src/ts/pages/PageWrapper/styles/switch.module.scss
+++ b/src/ts/pages/PageWrapper/styles/switch.module.scss
@@ -17,7 +17,7 @@
   display: inline-block;
   width: 50%;
   max-width: 50%;
-  padding: 8px 20px;
+  padding: 8px 0;
   margin: 0;
 
   font-size: var(--font-s);
