--- a/src/ts/components/YearChart/styles/index.module.scss
+++ b/src/ts/components/YearChart/styles/index.module.scss
@@ -44,13 +44,64 @@
     max-width: var(--month-size);
 
     &_day {
+      position: relative;
       display: inline-block;
       width: var(--day-size);
-      height:  var(--day-size);
+      height: var(--day-size);
       margin: 0 1px 1px 0;
       vertical-align: top;
       background-color: var(--color-border);
       background-blend-mode: screen;
+      cursor: pointer;
+      text-align: center;
+
+      &_arrow {
+        position: absolute;
+        top: 20px;
+        left: 0;
+        z-index: 1;
+
+        display: inline-block;
+        width: 0;
+        height: 0;
+
+        transform: rotateZ(-45deg);
+        border: 16px solid white;
+        border-right: none;
+        border-bottom: none;
+        background-color: white;
+      }
+
+      &_info {
+        font-size: var(--font-s);
+        position: absolute;
+        left: -175px;
+        top: var(--space-xxl);
+        z-index: 1;
+
+        display: block;
+        width: 350px;
+        max-height: 350px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        padding: var(--space-s);
+
+        cursor: default;
+        text-align: left;
+        border-radius: var(--border-radius-m);
+        box-shadow: 2px 2px 5px var(--color-border);
+        border: 1px solid var(--color-border);
+        background-color: white;
+
+        &::-webkit-scrollbar {
+          width: 8px;
+          background-color: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: #AAAAAA;
+        }
+      }
     }
   }
 }
