--- a/src/ts/pages/Welcome/styles/index.module.scss
+++ b/src/ts/pages/Welcome/styles/index.module.scss
@@ -13,70 +13,52 @@
 
   box-sizing: border-box;
   text-align: center;
-}
 
-.welcome_row {
-  width: auto;
-}
+  &_console {
+    max-width: 700px;
+  }
 
-.welcome_step__icon,
-.welcome_step__icon:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 38px;
-  font-weight: 100;
-  display: block;
-  width: 70px;
-  height: 70px;
-  text-align: center;
-  line-height: 70px;
-  border: 1px solid black;
-  background-color: transparent;
-}
+  &_row {
+    width: auto;
+  }
 
-.welcome_step__icon:after {
-  content: '';
-  top: 4px;
-  left: 4px;
-  background-color: transparent;
-}
+  &_first_title,
+  &_last_title {
+    font-size: 42px;
+    font-weight: 100;
+    margin: 46px auto;
+    padding: 0;
+  }
 
-.welcome__title_1,
-.welcome__title_2 {
-  font-size: 42px;
-  font-weight: 100;
-  margin: 46px auto;
-  padding: 0;
-}
+  &_first_title {
+    margin-top: 0;
+  }
 
-.welcome__title_1 {
-  margin-top: 0;
-}
+  &_last_title {
+    margin-bottom: 0;
+  }
 
-.welcome__title_2 {
-  margin-bottom: 0;
-}
+  &_link,
+  &_description {
+    font-size: var(--font-xs);
 
-.welcome__description_link,
-.welcome__description {
-  font-size: var(--font-xs);
+    display: inline-block;
+    width: 100%;
+    max-width: 700px;
+    padding: 0;
+    margin: 16px auto 0;
 
-  display: inline-block;
-  width: 100%;
-  max-width: 700px;
-  padding: 0;
-  margin: 16px auto 0;
+    line-height: 1.3;
+    text-align: center;
+    text-decoration: none;
+    color: #878FA1;
+  }
 
-  line-height: 1.3;
-  text-align: center;
-  text-decoration: none;
-  color: #878FA1;
-}
-
-.welcome__description_link {
-  display: inline;
-  text-decoration: underline;
+  &_link {
+    display: inline;
+    margin: 16px 0 0 4px;
+    text-decoration: underline;
+  }
 }
 
 @media (max-width: 800px) {
@@ -84,24 +66,15 @@
     display: block;
     width: 100%;
     padding: 32px 0 0 0;
-  }
 
-  .welcome__title_1,
-  .welcome__title_2 {
-    width: 90%;
-    font-size: var(--font-l);
-  }
+    &_first_title,
+    &_last_title {
+      width: 90%;
+      font-size: var(--font-l);
+    }
 
-  .welcome__description {
-    width: 90%;
-  }
-
-  .welcome_icons__console {
-    width: 90%;
-    margin: 0 auto;
-  }
-
-  .welcome_icons__console_body {
-    height: 200px;
+    &_description {
+      width: 90%;
+    }
   }
 }
