--- a/src/ts/pages/Welcome/styles/index.module.scss
+++ b/src/ts/pages/Welcome/styles/index.module.scss
@@ -6,8 +6,8 @@
   align-items: center;
   justify-content: center;
 
-  width: calc(100vw - 16px);
-  height: 100vh;
+  width: calc(100vw - 20px);
+  height: calc(100vh - 60px);
   padding: 0;
   margin: 0;
 
@@ -20,6 +20,29 @@
 
   &_row {
     width: auto;
+  }
+
+  &_warning {
+    font-weight: 100;
+    font-size: var(--font-s);
+    width: 100%;
+    margin: 0 auto;
+    padding: 6px;
+    box-sizing: border-box;
+
+    line-height: 1.5;
+    text-align: center;
+    border-bottom: 3px solid red;
+    background-color: #FCDADA;
+
+    &_bold {
+      font-weight: bold;
+      color: red;
+    }
+    &_link {
+      text-decoration: underline;
+      color: var(--color-button);
+    }
   }
 
   &_first_title,
@@ -65,6 +88,7 @@
   .welcome {
     display: block;
     width: 100%;
+    height: auto;
     padding: 32px 0 0 0;
 
     &_first_title,
