JIRA-1234 feat(lang): test test test

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -26,8 +26,9 @@
   --color-black: #12131B;
   --color-grey: #CBCBCD;
   --color-border: #E2E9F0;
-  --color-button: #0D69F2;
-  --color-button-2: #0B59CC;
+  --color-button: #1A73E8;
+  --color-button-2: #3081EA;
+  --color-button-3: #0B59CC;
 
   --color-11: #7F9BE0;
   --color-12: #E9A5A1;
