--- a/src/ts/components/UiKit/styles/index.module.scss
+++ b/src/ts/components/UiKit/styles/index.module.scss
@@ -70,6 +70,7 @@
   --button-color-text: #FFFFFF;
   --button-color-border: var(--color-button);
   --button-color-hover: var(--color-button-2);
+  --button-color-active: var(--color-button-3);
 
   &_slim,
   &_second {
@@ -77,6 +78,7 @@
     --button-color-text: var(--color-black);
     --button-color-border: var(--color-border);
     --button-color-hover: var(--color-border);
+    --button-color-active: var(--color-border);
   }
 }
 
@@ -102,6 +104,10 @@
   background-color: var(--button-color-bg);
 
   &:hover {
+    background-color: var(--button-color-hover);
+  }
+
+  &:active {
     background-color: var(--button-color-hover);
   }
 
