JIRA-1234 feat(lang): test test test

--- a/src/ts/pages/Welcome/styles/index.module.scss
+++ b/src/ts/pages/Welcome/styles/index.module.scss
@@ -84,7 +84,7 @@
 
   &_link {
     display: inline;
-    margin: 16px 0 0 4px;
+    margin: 16px 4px 0 4px;
     text-decoration: underline;
   }
 }
