MMM-2022 lol(kek): 4eburek

--- a/src/ts/components/Description/index.module.scss
+++ b/src/ts/components/Description/index.module.scss
@@ -31,6 +31,19 @@
     margin-bottom: 4px;
   }
 
+  &_link {
+    text-decoration: underline;
+    color: var(--color-button);
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    &:visited {
+      color: var(--color-button);
+    }
+  }
+
   &_list {
     position: relative;
     padding: 0 0 0 22px;
