TEST-1234 some(time): all end

--- a/src/ts/pages/PageWrapper/styles/header.module.scss
+++ b/src/ts/pages/PageWrapper/styles/header.module.scss
@@ -27,8 +27,18 @@
     user-select: none;
     vertical-align: top;
   }
+
   &_print {
     margin-right: 24px;
+  }
+}
+
+@media (max-width: 700px) {
+  .header {
+    &_print,
+    &_setting {
+      display: none;
+    }
   }
 }
 
