--- a/src/ts/components/UiKit/styles/index.module.scss
+++ b/src/ts/components/UiKit/styles/index.module.scss
@@ -117,7 +117,7 @@
   }
 
   &:active {
-    background-color: var(--button-color-hover);
+    background-color: var(--button-color-active);
   }
 
   &.disabled {
