--- a/src/ts/pages/PageWrapper/styles/light_header.module.scss
+++ b/src/ts/pages/PageWrapper/styles/light_header.module.scss
@@ -1,5 +1,15 @@
 @import '../../../../styles/variables';
 
+.header_with_tab {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  padding: 0;
+  background-color: #FFFFFF;
+}
+
 .light_header {
   position: fixed;
   top: 0;
