--- a/src/ts/components/ModalWindow/styles/index.module.scss
+++ b/src/ts/components/ModalWindow/styles/index.module.scss
@@ -1,4 +1,5 @@
-.modal_window {
+.modal_window,
+.modal_window_fullscreen {
   display: block;
   width: 400px;
   padding: 0;
@@ -7,7 +8,26 @@
   box-shadow: 0 0 5px gray;
   background-color: #FFFFFF;
   border-radius: 8px;
+}
 
+.modal_window_fullscreen {
+  position: relative;
+  height: 100vh;
+  width: 100vh;
+  border-radius: 0;
+  animation: modal_window_fullscreen 0.2s ease-out forwards;
+}
+
+@keyframes modal_window_fullscreen {
+  from {
+    right: 100%;
+  }
+  to {
+    right: 0;
+  }
+}
+
+.modal_window {
   &_wrapper {
     position: fixed;
     top: 0;
@@ -19,6 +39,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 
     background-color: rgba(90, 90, 90, 0.2);
   }
@@ -46,15 +67,6 @@
     max-height: 60vh;
     padding: 0 24px;
     overflow: auto;
-
-    &::-webkit-scrollbar {
-      width: 8px;
-      background-color: #DDDDDD;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: #AAAAAA;
-    }
   }
 
   &_footer {
@@ -64,12 +76,12 @@
 
   &_close {
     position: absolute;
-    top: 4px;
-    right: 4px;
+    top: 12px;
+    right: 12px;
 
     display: block;
-    width: 24px;
-    height: 24px;
+    width: 32px;
+    height: 32px;
 
     cursor: pointer;
     transition: transform 1s ease-in-out;
