--- a/src/ts/pages/Team/styles/filters.module.scss
+++ b/src/ts/pages/Team/styles/filters.module.scss
@@ -1,25 +1,28 @@
 @import 'src/styles/variables';
 
-.tree_filters {
-  display: inline-block;
-  margin: 0 24px 24px 0;
-  vertical-align: top;
-}
-
-.tempo_filters {
-  margin: 0 0 24px 0;
-
-  &_date_range {
-    width: 260px;
-    max-width: 260px;
-    margin: 0 var(--space-xs);
-    text-align: center;
+.table_filters {
+  &_item {
+    display: inline-block;
+    width: 350px;
+    margin: 0 24px 0 0;
+    vertical-align: top;
   }
 
-  &_user {
-    display: inline-block;
-    width: 260px;
-    max-width: 260px;
-    margin: 0 6px;
+  &_item:first-child {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .table_filters {
+    &_item {
+      display: block;
+      width: 100%;
+      margin: 0;
+    }
+
+    &_item:first-child {
+      margin-bottom: 24px;
+    }
   }
 }
