--- a/src/ts/pages/PageWrapper/styles/index.module.scss
+++ b/src/ts/pages/PageWrapper/styles/index.module.scss
@@ -18,7 +18,7 @@
     display: block;
     height: 100px;
     width: 100%;
-    background-color: var(--color-black);
+    background-color: white;
   }
 
   &_main,
@@ -34,6 +34,7 @@
 
   &_main_mobile {
     width: calc(100vw - 240px);
+    padding: 24px 24px 82px;
   }
 }
 
