--- a/src/ts/components/HoursChart/styles/legend.module.scss
+++ b/src/ts/components/HoursChart/styles/legend.module.scss
@@ -1,6 +1,6 @@
 @import 'src/styles/variables';
 
-.legend {
+.hours_chart_legend {
   display: block;
   box-sizing: border-box;
   vertical-align: top;
