--- a/src/ts/components/Recommendations/styles/index.module.scss
+++ b/src/ts/components/Recommendations/styles/index.module.scss
@@ -3,7 +3,7 @@
 .recommendations_container {
   position: relative;
   display: block;
-  margin: 0;
+  margin: 0 auto 12px 0;
   padding: 0;
 
   text-align: left;
