--- a/src/ts/components/Table/styles/index.module.scss
+++ b/src/ts/components/Table/styles/index.module.scss
@@ -10,72 +10,103 @@
   break-inside: auto;
   --table-cell-height: 48px;
   --table-bar-width: 350px;
-}
 
-.table_tree {
-  --table-cell-height: 22px;
-  --table-bar-width: 200px;
-}
+  &_tree {
+    --table-cell-height: 22px;
+    --table-bar-width: 200px;
+  }
 
-.table_row {
-  position: relative;
-  font-weight: 100;
-  display: block;
-  white-space: nowrap;
-  border-bottom: 1px solid #EEEEEE;
-  break-inside: auto;
-}
+  &_row {
+    position: relative;
+    font-weight: 100;
+    display: block;
+    white-space: nowrap;
+    border-bottom: 1px solid #EEEEEE;
+    break-inside: auto;
 
-.table_row:last-child {
-  border-bottom: none;
-}
+    &:last-child {
+      border-bottom: none;
+    }
 
-.table_row_hide {
-  opacity: 0.2;
-}
+    &_hide {
+      opacity: 0.2;
+    }
 
-.table_cell,
-.table_header_cell {
-  font-size: var(--font-xs);
-  z-index: 0;
+    &_selected {
+      background-color: #FFFAF0;
+    }
+  }
 
-  display: inline-block;
-  height: var(--table-cell-height);
-  line-height: var(--table-cell-height);
+  &_sub_row {
+    position: relative;
+    font-weight: 100;
+    display: block;
+    padding-top: 24px;
+    padding-left: 12px;
+    white-space: nowrap;
+    border-bottom: 1px solid #EEEEEE;
+    break-inside: auto;
+  }
 
-  box-sizing: border-box;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  vertical-align: top;
-}
+  &_cell,
+  &_header_cell {
+    font-size: var(--font-xs);
+    z-index: 0;
 
-.table_cell {
-  padding: 0 4px;
-}
+    display: inline-block;
+    height: var(--table-cell-height);
+    line-height: var(--table-cell-height);
 
-.table_header_cell {
-  font-weight: bold;
-  height: var(--table-cell-height);
-  padding: 0 4px;
-  line-height: var(--table-cell-height);
-  background-color: #FFFFFF;
-}
+    box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: top;
+  }
 
-.table_cell:first-child,
-.table_header_cell:first-child {
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
+  &_cell {
+    padding: 0 4px;
+  }
 
-.table_cell:first-child {
-  background-color: rgba(255, 255, 255, 0.9);
-}
+  &_header_cell {
+    font-weight: bold;
+    height: var(--table-cell-height);
+    padding: 0 4px;
+    line-height: var(--table-cell-height);
+    background-color: #FFFFFF;
+  }
 
-.table_cell_number {
-  text-align: right;
+  &_cell:first-child,
+  &_header_cell:first-child {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  &_cell:first-child {
+    background-color: rgba(255, 255, 255, 0.9);
+  }
+
+  &_cell_number {
+    text-align: right;
+  }
+
+  &_cell_icon {
+    &_open,
+    &_close {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      margin-top: 8px;
+      cursor: pointer;
+      transition: transform 0.5s;
+    }
+
+    &_open {
+      transform: rotate(90deg);
+    }
+  }
 }
 
 .disabled {
@@ -91,7 +122,7 @@
 }
 
 @media print {
-  .table_cell:first-child {
-    background-color: transparent;
-  }
+.table_cell:first-child {
+background-color: transparent;
+}
 }
