--- a/src/ts/components/CardWithIcon/index.module.scss
+++ b/src/ts/components/CardWithIcon/index.module.scss
@@ -7,11 +7,18 @@
   min-height: 270px;
   margin: 0 24px 24px 0;
   padding: 16px;
+
   vertical-align: top;
+  text-decoration: none;
   box-sizing: border-box;
+
   border-radius: 8px;
   border: 1px solid var(--color-border);
   background-color: #FFFFFF;
+
+  background-repeat: repeat;
+  background-size: auto 100%;
+  background-position: center center;
 
   &_icon {
     display: block;
@@ -59,7 +66,7 @@
 
 .card_with_icon_long {
   width: 100%;
-  margin: 0 0 16px 0;
+  margin: 0 0 24px 0;
 }
 
 .card_with_icon:nth-child(2n+2) {
