--- a/src/ts/components/Recommendations/styles/card.module.scss
+++ b/src/ts/components/Recommendations/styles/card.module.scss
@@ -106,12 +106,11 @@
   border-left-color: var(--color-temp-border);
 
   &_banner {
+    font-size: var(--font-m);
+    padding: 0;
+    line-height: 100px;
     border-left-width: 1px;
     border-left-color: var(--color-border);
-
-    background-repeat: no-repeat;
-    background-size: 180% auto;
-    background-position: center center;
   }
 }
 
