--- a/src/ts/components/UiKit/styles/button.module.scss
+++ b/src/ts/components/UiKit/styles/button.module.scss
@@ -103,7 +103,7 @@
 }
 
 .ui_kit_button + .ui_kit_button {
-  margin-right: 24px;
+  margin-left: 24px;
 }
 
 .ui_kit_button_full_size + .ui_kit_button_full_size {
