--- a/src/ts/components/UiKit/styles/button.module.scss
+++ b/src/ts/components/UiKit/styles/button.module.scss
@@ -107,7 +107,7 @@
 }
 
 .ui_kit_button_full_size + .ui_kit_button_full_size {
-  margin-right: auto;
+  margin-left: auto;
 }
 
 .ui_kit_button_menu {
